--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js13k-vite-plugins",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "build": "tsc"
@@ -12,15 +12,15 @@
   },
   "dependencies": {
     "@ampproject/rollup-plugin-closure-compiler": "^0.27.0",
-    "@rollup/plugin-typescript": "^11.0.0",
+    "@rollup/plugin-typescript": "^11.1.0",
     "advzip-bin": "^2.0.0",
     "clean-css": "^5.3.2",
-    "google-closure-compiler": "^20230206.0.0",
+    "google-closure-compiler": "^20230502.0.0",
     "ect-bin": "^1.4.1",
-    "glob": "^8.1.0",
-    "html-minifier-terser": "^7.1.0",
+    "glob": "^10.2.2",
+    "html-minifier-terser": "^7.2.0",
     "roadroller": "^2.1.0",
-    "terser": "^5.16.4"
+    "terser": "^5.17.1"
   },
   "peerDependencies": {
     "terser": "^5.0.0",
@@ -28,21 +28,21 @@
   },
   "devDependencies": {
     "@types/clean-css": "4.2.6",
-    "@types/glob": "8.0.1",
+    "@types/glob": "8.1.0",
     "@types/google-closure-compiler": "0.0.19",
     "@types/html-minifier-terser": "7.0.0",
-    "@typescript-eslint/eslint-plugin": "5.52.0",
-    "@typescript-eslint/parser": "5.52.0",
-    "eslint": "8.34.0",
-    "eslint-config-prettier": "8.6.0",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
+    "eslint": "8.40.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
-    "prettier": "2.8.4",
-    "rollup": "3.17.2",
+    "prettier": "2.8.8",
+    "rollup": "3.21.5",
     "ts-node": "10.9.1",
     "tslib": "2.5.0",
-    "typescript": "4.9.5",
-    "vite": "4.1.3",
-    "vite-plugin-dts": "2.0.0-beta.2"
+    "typescript": "5.0.4",
+    "vite": "4.3.5",
+    "vite-plugin-dts": "2.3.0"
   },
   "prettier": {
     "printWidth": 120,
