--- a/package.json
+++ b/package.json
@@ -3,24 +3,26 @@
   "version": "0.0.5",
   "type": "module",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc && node esbuild.mjs"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/esm/index.mjs",
   "exports": {
-    "import": "./dist/index.js"
+    "types": "./dist/types/index.d.ts",
+    "require": "./dist/cjs/index.cjs",
+    "import": "./dist/esm/index.mjs"
   },
   "dependencies": {
-    "@ampproject/rollup-plugin-closure-compiler": "^0.27.0",
-    "@rollup/plugin-typescript": "^11.1.1",
+    "@rollup/plugin-typescript": "^11.1.2",
     "advzip-bin": "^2.0.0",
     "clean-css": "^5.3.2",
     "google-closure-compiler": "^20230502.0.0",
     "ect-bin": "^1.4.1",
-    "glob": "^10.2.7",
+    "glob": "^10.3.3",
     "html-minifier-terser": "^7.2.0",
     "roadroller": "^2.1.0",
-    "terser": "^5.17.7"
+    "terser": "^5.18.2"
   },
   "peerDependencies": {
     "terser": "^5.0.0",
@@ -31,18 +33,19 @@
     "@types/glob": "8.1.0",
     "@types/google-closure-compiler": "0.0.19",
     "@types/html-minifier-terser": "7.0.0",
-    "@typescript-eslint/eslint-plugin": "5.59.9",
-    "@typescript-eslint/parser": "5.59.9",
-    "eslint": "8.42.0",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
+    "esbuild": "0.18.11",
+    "eslint": "8.44.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
-    "prettier": "2.8.8",
-    "rollup": "3.24.1",
+    "prettier": "3.0.0",
+    "rollup": "3.26.2",
     "ts-node": "10.9.1",
-    "tslib": "2.5.3",
-    "typescript": "5.1.3",
-    "vite": "4.3.9",
-    "vite-plugin-dts": "2.3.0"
+    "tslib": "2.6.0",
+    "typescript": "5.1.6",
+    "vite": "4.4.2",
+    "vite-plugin-dts": "3.2.0"
   },
   "prettier": {
     "printWidth": 120,
@@ -83,7 +86,8 @@
     },
     "ignorePatterns": [
       "dist",
-      "node_modules"
+      "node_modules",
+      "esbuild.mjs"
     ]
   }
 }
