--- a/package.json
+++ b/package.json
@@ -28,65 +28,16 @@
     "vite": "^5.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.5.3",
     "@types/clean-css": "4.2.11",
     "@types/glob": "8.1.0",
     "@types/html-minifier-terser": "7.0.2",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/parser": "6.20.0",
     "esbuild": "0.20.0",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "prettier": "3.2.4",
     "rollup": "4.9.6",
     "ts-node": "10.9.2",
     "tslib": "2.6.2",
     "typescript": "5.3.3",
     "vite": "5.0.12",
     "vite-plugin-dts": "3.7.2"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
-  "eslintConfig": {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    },
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:prettier/recommended"
-    ],
-    "rules": {
-      "@typescript-eslint/explicit-function-return-type": [
-        "error",
-        {
-          "allowExpressions": true
-        }
-      ],
-      "@typescript-eslint/explicit-module-boundary-types": "off",
-      "@typescript-eslint/no-explicit-any": "off",
-      "@typescript-eslint/no-floating-promises": "error",
-      "@typescript-eslint/no-unused-vars": [
-        "error",
-        {
-          "argsIgnorePattern": "^_",
-          "varsIgnorePattern": "^_"
-        }
-      ],
-      "prefer-promise-reject-errors": "error"
-    },
-    "ignorePatterns": [
-      "dist",
-      "node_modules",
-      "esbuild.mjs"
-    ]
   }
 }
