--- a/package.json
+++ b/package.json
@@ -2,42 +2,42 @@
   "name": "js13k-vite-plugins",
   "version": "0.2.1",
   "type": "module",
-  "scripts": {
-    "build": "tsc && node esbuild.mjs"
-  },
-  "types": "dist/types/index.d.ts",
-  "main": "dist/cjs/index.cjs",
-  "module": "dist/esm/index.mjs",
   "exports": {
     "types": "./dist/types/index.d.ts",
     "require": "./dist/cjs/index.cjs",
     "import": "./dist/esm/index.mjs"
   },
-  "dependencies": {
-    "@rollup/plugin-typescript": "^11.1.6",
-    "advzip-bin": "^2.0.0",
-    "clean-css": "^5.3.3",
-    "ect-bin": "^1.4.1",
-    "glob": "^10.3.10",
-    "html-minifier-terser": "^7.2.0",
-    "roadroller": "^2.1.0",
-    "terser": "^5.27.0"
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/esm/index.mjs",
+  "types": "dist/types/index.d.ts",
+  "scripts": {
+    "build": "tsc && node esbuild.mjs"
   },
-  "peerDependencies": {
-    "terser": "^5.0.0",
-    "vite": "^5.0.0"
+  "dependencies": {
+    "@rollup/plugin-typescript": "11.1.6",
+    "advzip-bin": "2.0.0",
+    "clean-css": "5.3.3",
+    "ect-bin": "1.4.1",
+    "glob": "10.3.10",
+    "html-minifier-terser": "7.2.0",
+    "roadroller": "2.1.0",
+    "terser": "5.29.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
     "@types/clean-css": "4.2.11",
     "@types/glob": "8.1.0",
     "@types/html-minifier-terser": "7.0.2",
-    "esbuild": "0.20.0",
-    "rollup": "4.9.6",
+    "esbuild": "0.20.1",
+    "rollup": "4.12.1",
     "ts-node": "10.9.2",
     "tslib": "2.6.2",
-    "typescript": "5.3.3",
-    "vite": "5.0.12",
-    "vite-plugin-dts": "3.7.2"
+    "typescript": "5.4.2",
+    "vite": "5.1.5",
+    "vite-plugin-dts": "3.7.3"
+  },
+  "peerDependencies": {
+    "terser": "^5.0.0",
+    "vite": "^5.0.0"
   }
 }
