--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js13k-vite-plugins",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "type": "module",
   "exports": {
     "types": "./dist/types/index.d.ts",
@@ -24,17 +24,14 @@
     "terser": "5.29.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.5.3",
+    "@biomejs/biome": "1.6.0",
     "@types/clean-css": "4.2.11",
     "@types/glob": "8.1.0",
     "@types/html-minifier-terser": "7.0.2",
     "esbuild": "0.20.1",
     "rollup": "4.12.1",
-    "ts-node": "10.9.2",
-    "tslib": "2.6.2",
     "typescript": "5.4.2",
-    "vite": "5.1.5",
-    "vite-plugin-dts": "3.7.3"
+    "vite": "5.1.5"
   },
   "peerDependencies": {
     "terser": "^5.0.0",
