--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "organizeImports": {
     "enabled": true
   },
@@ -13,6 +13,9 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "nursery": {
+        "useExplicitType": "error"
+      },
       "style": {
         "noParameterAssign": "off",
         "useImportType": "off",
@@ -30,5 +33,8 @@
       "enabled": true,
       "quoteStyle": "single"
     }
+  },
+  "files": {
+    "ignore": [".turbo", "dist", "node_modules"]
   }
 }
