--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,6 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "organizeImports": {
-    "enabled": true
-  },
+  "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
@@ -35,6 +33,6 @@
     }
   },
   "files": {
-    "ignore": [".turbo", "dist", "node_modules"]
+    "includes": ["**", "!**/.turbo", "!**/dist", "!**/node_modules"]
   }
 }
