--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js13k-vite-plugins",
-  "version": "0.3.6",
+  "version": "0.4.0",
   "type": "module",
   "exports": {
     "types": "./dist/types/index.d.ts",
@@ -36,7 +36,10 @@
     "vite": "7.0.6"
   },
   "peerDependencies": {
-    "terser": "^5.0.0",
-    "vite": "^6.0.0"
+    "terser": "^5.16.0",
+    "vite": "^7.0.0"
+  },
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
   }
 }
