--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "glob": "13.0.0",
     "html-minifier-terser": "7.2.0",
     "roadroller": "2.1.0",
+    "shader-minifier-wasm": "^0.2.1",
     "terser": "5.44.1",
     "vite-plugin-imagemin": "0.6.1"
   },
@@ -36,7 +37,7 @@
     "vite": "7.3.0"
   },
   "peerDependencies": {
-    "terser": "^5.16.0",
+    "terser": "^5.0.0",
     "vite": "^7.0.0"
   },
   "engines": {
